5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1680_2471.log
== TEST (2019-04-30 17:25:31) 
-- CODE:
ida=int(input("Insira a idade"))
imc= float(input("Insira o IMC"))
print("Entradas: ",ida,"e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:26:01) 
-- CODE:
ida=int(input("Insira a idade"))
imc= float(input("Insira o IMC"))
print("Entradas: ",ida,"e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")
	
-- OUTPUT:
Entradas:  0 e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:26:18) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas: ",ida,"e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")
	
-- OUTPUT:
Entradas:  0 e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:26:28) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas: ",ida,"e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")
	
-- OUTPUT:
Entradas:  0 e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:26:51) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: 0 e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:29:17) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22)
	print("Risco: Baixo")
elif
-- ERROR:
File "XXXX", line 7
    elif(ida<45 and imc<22)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:29:23) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")

-- OUTPUT:
Entradas: 0 e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:29:52) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:33:46) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:34:01) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.153308
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:34:09) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:34:21) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.141422
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:34:27) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:35:12) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>45 and imc<=22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.181979
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:35:13) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>45 and imc<=22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:35:29) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>45 and imc<=22):
	print("Risco: Medio")
elif(ida>=45 and imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:35:56) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>45 and imc<=22):
	print("Risco: Medio")
elif(ida>=45 or imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- EXECUTION TIME:
0.153044
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Medio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:35:56) 
-- CODE:
ida=int(input("Insira a idade:"))
imc= float(input("Insira o IMC:"))
print("Entradas:",ida,"anos e IMC",imc)
if(ida>130 or ida<=0 or imc<=0):
	print("Dados invalidos")

elif(ida<45 and imc<22):
	print("Risco: Baixo")
elif(ida>45 and imc<=22):
	print("Risco: Medio")
elif(ida>=45 or imc<22):
	print("Risco: Medio")
elif(ida>=45 and imc>=22):
	print("Risco: Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
